--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jaap.samples</groupId>
-    <artifactId>simuduck</artifactId>
+    <artifactId>patterns</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
